Add @tanstack/react-query-devtools for enhanced query debugging capabilities

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@eslint/eslintrc": "^3",
     "@redux-devtools/extension": "^3.3.0",
     "@tailwindcss/postcss": "^4",
+    "@tanstack/react-query-devtools": "^5.83.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
