--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.83.0",
+    "date-fns": "^4.1.0",
     "lucide": "^0.525.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
